# k-warning-check

./: .gitignore  CHANGELOG.md  README.ko.md  README.md  main.mjs  offscreen.html  options.html  package-lock.json  package.json  popup.html  start-desktop-app.mjs  tsconfig.app.json  vite.config.ts
docs/: ANALYSIS-ENGINE.md  ARCHITECTURE.md  CHROME-EXTENSION.md  DESKTOP-APP.md  DEVELOPMENT.md  GITHUB-RELEASE.md  INSTALL.md  PROVIDERS.md  SECURITY.md  official-risk-baselines.md
mac-app/: package.json
mac-app/electron/: main.cjs  main.mjs  preload.cjs  preload.mjs
mac-app/native/: screen-access.swift
mac-app/scripts/: after-sign.mjs  prepare-build.mjs
main/: capture-overlay.html  desktop.html  launcher.html  options.html  package.json  popup.html  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vite.desktop.config.ts
main/electron-shared/: codex-services.mjs  provider-bridge.mjs  provider-state.mjs  shared-preload.cjs  shared-preload.mjs  start-desktop-app.mjs
main/native/: codex-native-host  codex-native-host.mjs  codex-services.mjs  kr.k_warning_check.codex.json
main/scripts/: clean-desktop-renderer.mjs  codex-bridge.mjs  generate-icons.mjs  install-native-host.mjs
main/src/: index.css
native/: codex-native-host  codex-native-host.mjs  kr.k_warning_check.codex.json
public/: manifest.json
scripts/: build-mac.mjs  codex-bridge.mjs  install-native-host.mjs
src/: index.css
src/background/: index.ts
src/data/: aiHookingChecklist.ts  riskBaselines.ts  rules.ts
src/options/: OptionsApp.tsx  main.tsx
src/popup/: PopupApp.tsx  main.tsx
src/shared/: constants.ts  defaults.ts  formatters.ts  types.ts
tauri-app/: Cargo.toml  tauri.conf.json
tauri-app/capabilities/: default.json
tauri-app/icons/: icon.icns
tauri-app/src/: lib.rs  main.rs  secure.rs  store.rs
tauri-app/src/commands/: capture.rs  codex.rs  history.rs  mod.rs  provider_bridge.rs  provider_state.rs  secure_store.rs  shortcuts.rs  system.rs
windows-app/: package.json
(+88 files in other folders)
